# wekeo_competition

./: pyproject.toml
wekeo_competition/: accept_terms.sh  hda_test.py
wekeo_competition/learn_sral/: 1_1_SRAL_data_access_HDA_Data_Store.py
