[tool.poetry]
name = "wekeo_competition"
version = "0.1.0"
description = ""
authors = ["Pablo Gómez Pérez <pablogope@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hda = "^0.2.2"
eumdac = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
